<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notesLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notesLabel"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="408dp" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="427dp" />

    <TextView
        android:id="@+id/medicationNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicationNameLabel"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="51dp" />

    <EditText
        android:id="@+id/medicationNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="70dp" />

    <TextView
        android:id="@+id/dosageLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dosageLabel"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="126dp" />

    <EditText
        android:id="@+id/dosageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:id="@+id/amountDispensedLabelTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountDispensed"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="194dp" />

    <EditText
        android:id="@+id/amountDispensedEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="213dp" />

    <TextView
        android:id="@+id/refillsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refillsLabel"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="262dp" />

    <EditText
        android:id="@+id/refillsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="281dp" />

    <TextView
        android:id="@+id/perscibingDoctorLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perscribingDoctor"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="336dp" />

    <EditText
        android:id="@+id/perscribingDoctorEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="355dp" />

</android.support.constraint.ConstraintLayout>