<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="73dp">

    <TextView
        android:id="@+id/notesLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notesLabel"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="368dp" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="387dp" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="302dp" />

    <EditText
        android:id="@+id/systolicPressureEditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="68dp" />

    <TextView
        android:id="@+id/systolicPressureLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systolicPressureLabel"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/diastolicPressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diastolicPressureLabel"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="127dp" />

    <TextView
        android:id="@+id/pressureUnitTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloodPressureUnits"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="89dp" />

    <TextView
        android:id="@+id/pressureUnitTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bloodPressureUnits"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="167dp" />

    <EditText
        android:id="@+id/diastolicPressureEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="146dp" />

    <TextView
        android:id="@+id/measuredArmLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/armMeasured"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="209dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/dateAndTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateAndTime"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="283dp" />

    <EditText
        android:id="@+id/bgDateEditText"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="302dp" />

</android.support.constraint.ConstraintLayout>