<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notesLabelTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notesLabel"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="368dp" />

    <EditText
        android:id="@+id/notesEditText2"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="387dp" />

    <EditText
        android:id="@+id/medicalRoleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="217dp" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="131dp" />

    <TextView
        android:id="@+id/lastNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastNameLabel"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="42dp" />

    <TextView
        android:id="@+id/firstNameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstNameLabel"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="112dp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/medicalRoleLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicalRoleLabel"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="198dp" />

    <TextView
        android:id="@+id/contactInformationLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactInformationLabel"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="279dp" />

    <EditText
        android:id="@+id/contactInformationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="298dp" />
</android.support.constraint.ConstraintLayout>