<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dateAndTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateAndTime"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="111dp" />

    <EditText
        android:id="@+id/bgDateTextView"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/notesLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notesLabel"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="185dp" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="215dp" />

    <TextView
        android:id="@+id/averageSugarConcentrationLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/averageSugarLabel"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="32dp" />

    <EditText
        android:id="@+id/averageSugarConcentrationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/percentLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentlabel"
        tools:layout_editor_absoluteX="246dp"
        tools:layout_editor_absoluteY="70dp" />
</android.support.constraint.ConstraintLayout>